@@ -163,6 +163,13 @@ requests.
       Example:
         ns_radius localhost 1645 secret User-Name test User-Password test2
 
+   
+    ns_udp ?-timeout N? ?-noreply? ipaddr port data
+      sends udp data
+
+      Example:
+         ns_udp 127.0.0.1 80 "GET / HTTP/1.0\n\n"
+
 Nsmibdump
 
   nsmibdump is utility that dumps MIB module or file into nsmib format. It uses 
